# mainsequence-sdk

./: .gitignore  404.html  CNAME  COPYRIGHT  Dockerfile  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: docs.yml  publish-to-pipy.yml  publish-to-pypi.yml
about/: index.html
changelog/: index.html
contact_and_support/: index.html
contributing/: index.html
deployment/gcp/: cloudbuild.yaml
docs/: CNAME  SUMMARY.md  about.md  contact_and_support.md  index.md  llm-instructions-time-series.md  time_series_cursor_instructions.md
docs/configuration/: configuration_detail.md
docs/examples/: index.md
docs/key_concepts/: time_series_fundamentals.md
docs/reference/: config.md  logconf.md  utils.md
docs/stylesheets/: custom.css
docs/tdag/: getting_started.md  orchestration_and_monitoring.md  time_series_fundamentals.md
docs/tutorial/: getting_started.md  getting_started_2.md  getting_started_3.md  getting_started_4.md  getting_started_5.md  getting_started_5_1.md  getting_started_5_2.md
examples/: index.html
examples/accounts/: accounts_tutorial.ipynb
examples/ai/: example_app.py
examples/apps/: load_external_portfolio.py  news_app.py  run_named_portfolio.py  run_portfolio.py
examples/configurations/: external_portfolio.yaml  external_portfolio_template.yaml  market_cap.yaml  market_cap_crypto.yaml  market_cap_crypto_vol_control.yaml  market_cap_databento.yaml  market_cap_example.yaml  market_cap_vol_control.yaml  sentiment_portfolio.yaml
examples/data_nodes/: __main__.py  simple_data_nodes.py  simple_simulated_prices.py
examples/getting_started/: Getting Started.ipynb  Portfolio Mock Execution.ipynb  simle_portfolio_run.py  simple_portfolio_run.py
examples/instructions/: gpt_instructions_ms_client.md  gpt_instructions_presentations.md
examples/portfolios/: create_portfolio_with_agent.ipynb  portfolio_building_tutorial.ipynb
examples/presentations/: presentation_example.py
examples/sample_data/: portfolio_weights_mag7.csv
examples/time_series/: __main__.py  data_example.py  duck_db_store.py  famma_franch_from_keneth.py  famma_french_from_polygon.py  fred_api_integration.py  no_assets_time_series.py  prices_from_api.py  simple_simulated_prices.py  source_timeseries.py  volatility_control.py
getting_started/TDAG/: index.html
key_concepts/time_series_fundamentals/: index.html
llm-instructions-time-series/: index.html
mainsequence/: __init__.py  base64_imgs.py  image_2_base64.txt  image_5_base64.txt  logconf.py
notebooks/: Getting Started.ipynb
output/: slides_report.html
platform_setup_scrpts/: Dockerfile  important
scripts/: README.template.md  copy_examples_to_project.sh  gen_ref_pages.py  generate_examples_index.py  get_git_and_run.sh  pyproject.template.toml  setup_project.sh  utils.sh
search/: search_index.json
tests/: mock_execution.py  test_agent.py  test_portfolio.py  test_replicator.py
(+475 files in other folders)
