[build-system]
requires = ["setuptools", "wheel","toml"]
build-backend = "setuptools.build_meta:__legacy__"

# PEP 621 dependencies declaration
# adapt to your dependencies manager
#[project]
#dependencies = [
#    "mkdocstrings-python",
#]

# TODO this explodes bc toml is not configured correctly
#[tool.setuptools.package-data]
#"mainsequence.dashboards.streamlit" = ["assets/*.png", "assets/config.toml"]